=head1 Changes in DBD-Oracle 1.22(svn rev xxxx)  2008 
  Makefile.PL now working without flags for Linux 11.1.0.6 instant client and regular client from John Scoles, Andy Sautins, H.Merijn Brand and Nathan Vonnahme
  
=head1 Changes in DBD-Oracle 1.21(svn rev 11067) 11th April 2008 
  Added Notes to README.win32.txt on installing Instant Client 11.1.0.6.0 from John Scoles
  Added the oci_typecode_name method to get the name rather than just the number of an OCI_TYPECODE from John Scoles
  Fixed a unreported bug with Embedded Objects from John Scoles
  Fixes for #34621 & 33791 from RT cpan 
  Added patch to allow faster fetch from REF CURSORs from Biswadeep Chowdhury
  Updated the Todo file for next version from John Scoles
  Added support for the 10.2 Data Interface for Persistent LOBs by John Scoles
  Changed the way pre-fetching is done by John Scoles
  Added support for Scrollable cursors from John Scoles
  Changed the max size of cache_rows to a sb4 rather than a int and or a ub4 from John Scoles
  Added support for Lobs in select of OCI Embedded Objects from John Scoles with a big thankyou to  Paul Weiss 
  Fixed for embedded object in object from Paul Weiss
  Added support for direct insert of large XML data into XMLType fields from Hendrik Fuss & John Scoles
  Fixed memory leak (not releasing Temp Lob with OCILobFreeTemporary) when created for a bind from John Scoles
  Added support for bind_param_inout_array for use with execute_array from John Scoles
  Added enhancement for Embedded Objects handling from Paul G. Weiss
  Fixed to Makefile.PL let it read makefiles from other makes from Alexander V Alekseev
  Updated POD to tell users to Avoid Using "SQL Call" from Charles Jardine   
  Updated POD to account for rt.cpan.org #30910: "DBD-Oracle crashes when trying to read empty LOB" from John Scoles
  Added DBD::Oracle impdata/threads patch from Jeffrey Klein
  
=head1 Changes in DBD-Oracle 1.20(svn rev 10517) 11th January 2008
