@@ -1,5 +1,6 @@
 =head1 Changes in DBD-Oracle 1.22(svn rev xxxx)  2008 
-  Makefile.PL now working without flags for Linux 11.1.0.6 instant client and regular client from John Scoles, Andy Sautins, H.Merijn Brand and Nathan Vonnahme
+  Makefile.PL now working without flags for Linux 11.1.0.6 instant client and regular client from John Scoles, Andy Sautins, H.Merijn Brand, Nathan Vonnahme and Karun Dutt
+  Fixed how persistant lob fetch works now uses callback correctly, from John Scoles
   
 =head1 Changes in DBD-Oracle 1.21(svn rev 11067) 11th April 2008 
   Added Notes to README.win32.txt on installing Instant Client 11.1.0.6.0 from John Scoles
